<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".signUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="42dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="100dp"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/enter_user_name"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/edtRePassword"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
            <EditText
                android:id="@+id/edtMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/enter_mobile_number"
               android:inputType="phone"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="40dp"
                android:text="@string/agree_to_terms_and_conditions"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:textSize="16sp"/>




            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="32dp"
                android:height="50sp"
                android:background="@drawable/orange_background"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:text="@string/already_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp">

            </TextView>



            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_now"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold">

            </TextView>




        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>