<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".SeatSelection">


    <ImageView
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:contentDescription="Back Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="HardcodedText" />



    <TextView
        android:id="@+id/textView8"
        android:layout_width="151dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/Settings"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/textView8"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25sp"
            android:paddingEnd="30dp"
            android:layout_marginTop="20sp"
            android:orientation="vertical"
            android:padding="18dp">

            <!-- GENERAL Section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GENERAL"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_background"
                android:textColor="@color/white"
                android:text="@string/notifications"

                android:gravity="start|center_vertical"
                android:padding="16dp"
                android:textAllCaps="false"
                app:drawableEndCompat="@drawable/next" />

            <TextView
                android:id="@+id/agreements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_background"
                android:textColor="@color/white"
                android:text="@string/agreements"
                android:gravity="start|center_vertical"
                android:padding="16dp"
                android:textAllCaps="false"
                app:drawableEndCompat="@drawable/next" />

            <TextView
                android:id="@+id/payment_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_background"
                android:textColor="@color/white"
                android:text="Manage Payment Methods"
                android:gravity="start|center_vertical"
                android:padding="16dp"
                android:textAllCaps="false"
                app:drawableEndCompat="@drawable/next"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/booking_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_background"
                android:textColor="@color/white"
                android:text="Booking History"
                android:gravity="start|center_vertical"
                android:padding="16dp"
                android:textAllCaps="false"
                app:drawableEndCompat="@drawable/next"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_background"
                android:textColor="@color/white"
                android:text="@string/password"
                app:drawableEndCompat="@drawable/next"
                android:gravity="start|center_vertical"
                android:padding="16dp"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/twofactor"
                android:layout_width="match_parent"
                app:drawableEndCompat="@drawable/next"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_background"
                android:textColor="@color/white"
                android:text="Two-Factor Authentication"
                android:gravity="start|center_vertical"
                android:padding="16dp"
                android:textAllCaps="false"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="FEEDBACK"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/app_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_background"
                android:textColor="@color/white"
                android:text="App feedback"
                app:drawableEndCompat="@drawable/next"
                android:gravity="start|center_vertical"
                android:padding="16dp"
                android:textAllCaps="false"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/bug_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_background"
                android:textColor="@color/white"
                android:text="Bug report"
                app:drawableEndCompat="@drawable/next"
                android:gravity="start|center_vertical"
                android:padding="16dp"
                android:textAllCaps="false"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Account"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_background"
                android:textColor="@color/white"
                android:text="Privacy"
                app:drawableEndCompat="@drawable/next"
                android:gravity="start|center_vertical"
                android:padding="16dp"
                android:textAllCaps="false"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_background"
                android:textColor="@color/white"
                app:drawableEndCompat="@drawable/next"
                android:text="@string/log_out"
                android:gravity="start|center_vertical"
                android:padding="16dp"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>